# OpenPomo

./: CMakeLists.txt
headers/: mainwindow.h  pomoclock.h
source/: main.cpp  mainwindow.cpp  pomoclock.cpp
ui/: mainwindow.ui  pomoclock.ui
